# market_data_collection

./: .gitignore  Dockerfile  README.md  cloudbuild.yaml  examples.ipynb  pyproject.toml
data_collection/: config.py  functions.py  main.py  stock.py
tests/: test_main.py
