[tool.poetry]
name = "data-collection"
version = "0.1.0"
description = ""
authors = ["scbtm <san.cbtm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "2.0.0"
yfinance = "^0.2.32"
pytest = "^7.4.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
