[tool.poetry]
name = "market-data-collection"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
yfinance = "^0.2.32"
pandas = "^2.1.3"
fastapi = "^0.104.1"
fsspec = "^2023.10.0"
gcsfs = "^2023.10.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
